--- a/themes/colors/css/ash.css
+++ b/themes/colors/css/ash.css
@@ -294,6 +294,11 @@ color: #ffffff;
 
 /*	Start Standard Code					*/
 
+table {
+margin-left: auto;
+margin-right: auto;
+}
+
 .blockcontent {
 margin-left:auto;
 border:1pt solid #999;
